# mcts

./: .dockerignore  .editorconfig  .flake8  .gitignore  .mypyignore  .pre-commit-config.yaml  .sanitizeignore  CLAUDE.md  LICENSE  MULTI_ARCH_PLAYWRIGHT_SOLUTION.md  README-AGENTS.md  README.md  REFACTOR_STATUS.md  build_cpp.py  context.md  debug_cpp_terminal.py  debug_deep_terminal.py  debug_no_flip.py  debug_positional_only.py  debug_root_visits.py  fix_corridors_checks.py  fix_corridors_final.py  git-safe  package.json  pyproject.toml  pytest.ini  simple_test.py  test_async.py  test_cpp_updated.py  test_game_manager.py  test_hook_trigger.txt  test_quality_gate.py  test_race_condition_validation_report.md  test_simple_eval.py  test_websocket.py  version_comparison_plan.md  vitest.config.ts
.claude/: AGENTS.md  CLAUDE_BUG.md  README.md  agents.json  settings.json
.claude/agents/: builder-cpu.md  builder-docker.md  builder-gpu.md  code-reviewer.md  doc-consistency-checker.md  formatter-black.md  mypy-type-checker.md  no-git-commits.md  test-writer.md  tester-pytest.md  tester-unified.md
.claude/hooks/: .quality-gate-last-run  auto_fix_types.py  auto_investigate_fix.py  check_docs.py  cleanup-temp-files.py  comprehensive-quality-check.py  debug-git-guard.py  doc-check-hook.py  doc-checker.py  doc-consistency-check.py  git-commit-guard.py  minimal-test.sh  on-change-chain.py  quality-gate-minimal.py  quality-gate-wrapper.py  quality-gate.py  test-enhanced-git-guard.py  test-git-guard.py  test-guard.py  test-hook-audit.py
.githooks/: pre-commit
.github/workflows/: encoding-check.yml  type-safety.yml
api/: README.md  __init__.py  game_manager.py  server.py
backend/: BUILD_VALIDATION.md  README.md  __init__.py
backend/api/: README.md  __init__.py  api_types.py  cleanup_config.py  connection_states.py  game_manager.py  game_pool.py  game_states.py  game_transitions.py  models.py  pure_utils.py  resource_manager.py  response_builders.py  server.py  state_types.py  types.py  websocket_endpoint.py  websocket_manager.py  websocket_models.py  websocket_unified.py
backend/core/: SConstruct  _corridors_mcts.cpp  boost_python_copy.h  corridors_bindings.cpp  corridors_threaded_api.cpp  corridors_threaded_api.h  flags.hpp  mcts_threaded.hpp  results.txt  test.cpp
backend/utils/: __init__.py  backend_builder.py  entrypoint.py  frontend_builder.py  types.py
debug/: README.md  debug_evaluation.py  debug_visits.py
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.gpu.yaml  docker-compose.yaml  entrypoint.sh  requirements.txt  supervisord.conf
docker/arm/: docker-compose.yaml  requirements.txt
docker/cuda/: docker-compose.yaml  requirements.txt
docs/: TECHNICAL_NOTE.md  ai-usage.md
frontend/: README.md  debug-test.tsx  npm-global-packages.json  package.json  setupTests.ts  vitest.config.mjs  vitest.config.ts  vitest.setup.ts
frontend/components/: App.test.tsx  GameBoard.test.tsx  GameSettings.test.tsx
frontend/services/: websocket.test.ts
frontend/setup/: basic-setup.test.ts  setupTests.ts  vitest.setup.ts
frontend/src/: App.css  App.test.tsx  App.tsx  setupTests.ts
frontend/store/: gameStore.test.ts
frontend/tests/: test-utils.tsx
frontend/utils/: testHelpers.ts
python/: gdb_init.txt
python/corridors/: corridors_mcts.py
scripts/: build-cpu.sh  build-gpu.sh  test-multi-arch.sh
src/: SConstruct  _corridors_mcts.cpp  board.cpp  board.h  corridors_threaded_api.cpp  corridors_threaded_api.h  flags.hpp  mc_tools.hpp  mcts.hpp  mcts_threaded.hpp  test.cpp
src/minimal_examples/: SConstruct  _minimal_example  main.cpp  numeric_test.hpp
stubs/: argparse.pyi  click.pyi  httpx.pyi  numpy.pyi  psutil.pyi  pydantic.pyi  pytest.pyi  pytest_asyncio.pyi  pytest_benchmark.pyi  requests.pyi  subprocess.pyi
stubs/_pytest/: __init__.pyi  config.pyi  fixtures.pyi  hookspec.pyi  monkeypatch.pyi  python.pyi  reports.pyi
stubs/corridors/: __init__.pyi  _corridors_mcts.pyi  corridors_mcts.pyi
stubs/fastapi/: __init__.py  __init__.pyi  responses.pyi  staticfiles.pyi  testclient.pyi  websockets.pyi
stubs/playwright/: __init__.pyi  async_api.pyi
stubs/pytest/: __init__.pyi
stubs/pytest_benchmark/: __init__.pyi  plugin.pyi
stubs/pytest_timeout/: __init__.pyi
stubs/pytest_xdist/: __init__.pyi
stubs/requests/: __init__.pyi  exceptions.pyi
stubs/starlette/: __init__.pyi  responses.pyi  staticfiles.pyi  websockets.pyi
stubs/test_infrastructure/: __init__.pyi  fixtures.pyi  helpers.pyi
stubs/unittest/: __init__.pyi  mock.pyi
stubs/uvicorn/: __init__.pyi
stubs/websockets/: __init__.pyi  client.pyi  exceptions.pyi
tests/: README.md  README_TEST_COMMANDS.md  TEST_COVERAGE.md  conftest.py  mock_helpers.py  pytest_marks.py  test_benchmarks.py  test_cpp_board_functions.py  test_edge_cases.py  test_integration.py  test_performance.py  test_python_functions.py  types.py
tests/api/: conftest.py  test_endpoints.py  test_endpoints_comprehensive.py  test_error_paths.py  test_game_manager.py  test_integration.py  test_integration_final.py  test_models.py  test_websocket.py  test_websocket_advanced.py  test_websocket_comprehensive.py
tests/backend/: test_api_integration.py  test_connection_states.py
tests/benchmarks/: test_benchmarks.py
tests/core/: test_core_integration.py  test_cpp_board_functions.py
tests/e2e/: MIGRATION_GUIDE.md  MIGRATION_STATUS.md  __init__.py  async_fixtures.py  conftest.py  e2e_helpers.py  migrate_tests.py  playwright.config.py  pytest.ini  test_board_interactions.py  test_browser_compatibility.py  test_browser_navigation.py  test_cleanup_behavior.py  test_complete_gameplay.py  test_component_race_conditions.py  test_connection_scenarios.py  test_connection_scenarios_fixed.py  test_cross_browser_demo.py  test_debug_ui.py  test_game_creation_disconnection_bug.py  test_infrastructure.py  (+10 more)
tools/: README.md  backend_build.py  check_type_safety.py  frontend_build.py  payload-guard.js  run-tests.js  run_type_checks.sh  sanitize.js  setup_playwright.py  string-utils.js  string_utils.py  verify-setup.js
(+205 files in other folders)
